fixed problem with scrollbar due to position:fixed header

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,5 +4,10 @@ body {
   width: 100vw;
   margin: 0;
   padding: 0;
+}
+body {
+  //extra space on top since header is fixed
+  margin-top: 35px;
+  padding-top: 30px;
   overflow-x: hidden;
 }
