--- a/src/styles/components/Account/Login.scss
+++ b/src/styles/components/Account/Login.scss
@@ -15,7 +15,6 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  margin-top: 100px;
   h2,
   h4 {
     color: $primary;
