--- a/src/styles/components/Sections/FreshCoffee.scss
+++ b/src/styles/components/Sections/FreshCoffee.scss
@@ -5,7 +5,6 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-top:100px;
   h2 {
     color: $primary;
   }
